# gpn-snektron

./: README.md
snek/: Cargo.toml
snek-viewer/: Cargo.toml
snek-viewer-2/: Cargo.toml
snek-viewer-2/assets/: test.json
snek-viewer-2/src/: data.rs  foo_material.rs  lib.rs  main.rs  snake_textures.rs  snek.frag  socketio.rs
snek-viewer-2/src/shaders/: foo_material.frag
snek-viewer-2/web/: build.sh  index.html
snek-viewer-wasm/: .gitignore  Cargo.toml  index.js  package-lock.json  package.json
snek-viewer-wasm/src/: lib.rs
snek-viewer/src/: data.rs  main.rs  socketio.rs  viewer.rs
snek-viewer/test_data/: test.json
snek/src/: main.rs
