[package]
name = "snek-viewer-2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
three-d = { git = "https://github.com/asny/three-d.git" }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.5"
colorsys = "0.6.7"


[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"
