[package]
name = "hello_world"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2021"
rust-version = "1.70"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.86"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]