[package]
name = "snek-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
rust_socketio = "0.4.0"
serde_json = "1.0.96"
json-patch = "1.0.0"
serde = "1.0.164"
bevy_prototype_lyon = "0.8.0"
